# Act-1

./: .gitignore  Actividad1.c  Actividad2.c  Actividad3.c  Actividad4.c  Actividad5.c  Actividad6.c  Actividad7.c  Actividad8.c  Actividad9.c  CMakeLists.txt
Colors/: CMakeLists.txt  colors.c  colors.h
